franchise competetive api upload
